2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewOverrideCompletionData.cs: fixed 'Bug 429032 - Override
	  completion elements can't be selected by name'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/CSharpTextEditorCompletion.cs: fixed
	  'Bug 429029 - Override completion missing some methods'.

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 429024 - Code
	  completion list shown for 'using' when inside a comment or string'

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewOverrideCompletionData.cs, Gui/CSharpTextEditorCompletion.cs:
	  fixed 'Bug 428387 - Code Completion: 'override' completion is
	  incorrect for interfaces'.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Worked on ctrl+space command.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpAmbience.cs: Generic method parameters are now emitted.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs: fixed 'Bug 367716 - Code completion
	  shows obsolete functions'.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed bug 'Bug 427511 - Code
	  Completion not working for files not belonging to a project'.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: Resolver now throws an argumentnull
	  exception, when dom is not set.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Gui/CSharpTextEditorCompletion.cs: removed
	  debug messages.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Parser/NRefactoryParser.cs: Added operator
	  overload handling.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: Operators are now converted.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewCSharpExpressionFinder.cs, Gui/CSharpTextEditorCompletion.cs: