@@ -1,5 +1,10 @@
 2008-09-23  Mike Krüger <mkrueger@novell.com> 
 
+	* Gui/MemberCompletionData.cs, Gui/ResolveVisitor.cs: fixed 'Bug 429035
+	  - Completion of string.IsNullOrEmpty throws an exception'.
+
+2008-09-23  Mike Krüger <mkrueger@novell.com> 
+
 	* Gui/NewOverrideCompletionData.cs: fixed 'Bug 429032 - Override
 	  completion elements can't be selected by name'.
 
